--- a/src/app/features/components/repair-sheet/repair-sheet.component.html
+++ b/src/app/features/components/repair-sheet/repair-sheet.component.html
@@ -50,7 +50,7 @@
       <div class="advanced-toggle">
         <button
           matButton="filled"
-          color="accent"
+          class="accent"
           (click)="toggleAdvanced()"
           [disabled]="installing"
         >
