--- a/src/app/features/modals/password-manager-modal/password-manager-modal.component.html
+++ b/src/app/features/modals/password-manager-modal/password-manager-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal">
   <div class="modal-header" data-tauri-drag-region>
-    <button matButton disabled>
+    <button>
       <mat-icon></mat-icon>
     </button>
 
@@ -78,9 +78,8 @@
               <div class="card-actions">
                 <button
                   matButton="filled"
-                  color="primary"
                   (click)="switchToSecurityTab()"
-                  class="action-button-large"
+                  class="action-button-large primary"
                 >
                   <mat-icon svgIcon="lock"></mat-icon>
                   Encrypt Configuration
@@ -280,8 +279,7 @@
                   @if (hasStoredPassword) {
                     <button
                       matButton="outlined"
-                      color="warn"
-                      class="action-button"
+                      class="action-button warn"
                       [disabled]="loading.isRemovingPassword"
                       (click)="removePassword()"
                     >
@@ -430,10 +428,9 @@
               } @else {
                 <button
                   matButton="outlined"
-                  color="warn"
                   (click)="unencryptConfig()"
                   [disabled]="!canUnencrypt || loading.isUnencrypting"
-                  class="action-button-large"
+                  class="action-button-large warn"
                 >
                   <mat-icon svgIcon="lock-open"></mat-icon>
                   @if (loading.isUnencrypting) {
@@ -545,10 +542,9 @@
               <div class="card-actions">
                 <button
                   matButton="filled"
-                  color="primary"
                   (click)="changePassword()"
                   [disabled]="!canChangePassword || loading.isChangingPassword"
-                  class="action-button-large"
+                  class="action-button-large primary"
                 >
                   <mat-icon svgIcon="key"></mat-icon>
                   @if (loading.isChangingPassword) {
@@ -580,9 +576,8 @@
               <div class="card-actions">
                 <button
                   matButton="filled"
-                  color="primary"
                   (click)="switchToSecurityTab()"
-                  class="action-button-large"
+                  class="action-button-large primary"
                 >
                   <mat-icon svgIcon="lock"></mat-icon>
                   Go to Security Settings
@@ -634,7 +629,7 @@
 
                 <button
                   matButton="outlined"
-                  color="warn"
+                  class="warn"
                   (click)="clearEnvPassword()"
                   [disabled]="!hasEnvPassword || loading.isClearingEnv"
                 >
@@ -684,10 +679,9 @@
                 <div class="card-actions">
                   <button
                     matButton="outlined"
-                    color="accent"
                     (click)="resetLockout()"
                     [disabled]="loading.isResettingLockout"
-                    class="action-button-large"
+                    class="action-button-large accent"
                   >
                     <mat-icon svgIcon="refresh"></mat-icon>
                     @if (loading.isResettingLockout) {
