--- a/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
+++ b/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
@@ -60,7 +60,7 @@
         <mat-icon svgIcon="search" class="empty-icon"></mat-icon>
         <h3>No shortcuts found</h3>
         <p>Try searching for a different term or clear your search.</p>
-        <button matButton="filled" color="accent" (click)="clearSearch()">Clear Search</button>
+        <button matButton="filled" class="accent" (click)="clearSearch()">Clear Search</button>
       </div>
     }
   </div>
