--- a/src/app/layout/titlebar/titlebar.component.html
+++ b/src/app/layout/titlebar/titlebar.component.html
@@ -47,7 +47,7 @@
         }
         @if (connectionStatus === 'checking') {
           <mat-progress-spinner
-            color="accent"
+            class="accent"
             diameter="24"
             mode="indeterminate"
             strokeWidth="4"
