--- a/src/app/shared/components/password-manager/password-manager.component.html
+++ b/src/app/shared/components/password-manager/password-manager.component.html
@@ -37,7 +37,7 @@
           [checked]="storePassword"
           (change)="onStoreChange($event.checked)"
           [disabled]="isSubmitting || disabled"
-          color="primary"
+          class="primary"
         ></mat-checkbox>
         <div class="store-option-content">
           <p class="store-label">Remember password securely</p>
