--- a/src/app/shared/modals/input-modal/input-modal.component.html
+++ b/src/app/shared/modals/input-modal/input-modal.component.html
@@ -149,7 +149,7 @@
     <div class="modal-actions">
       <button
         matButton="filled"
-        color="primary"
+        class="primary"
         (click)="confirm()"
         [disabled]="!isFormValid()"
         [attr.aria-label]="
