--- a/src/app/shared/modals/update-confirmation-dialog/update-confirmation-dialog.component.html
+++ b/src/app/shared/modals/update-confirmation-dialog/update-confirmation-dialog.component.html
@@ -35,7 +35,7 @@
         <span class="version latest">{{ data.latest_version_clean }}</span>
       </div>
       <mat-divider></mat-divider>
-      <button matButton="outlined" color="accent" (click)="openChangelog()">
+      <button matButton="outlined" class="accent" (click)="openChangelog()">
         <mat-icon svgIcon="open-link"></mat-icon>
         View changelog
       </button>
